--- a/.gitignore
+++ b/.gitignore
@@ -30,19 +30,31 @@ _ReSharper*/
 ipch/
 *.opensdf
 
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
 # Ignore files build by ndk and eclipse
 libs/
 bin/
 obj/
 gen/
 assets/
-#.classpath
-#.project
-#.cproject
+.classpath
+.project
+.cproject
 local.properties
 
 # Ignore files build by linux
 *.o
+*.o.d
+*.a
 
 # Ignore python compiled files
 *.pyc
